--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ form button{
     align-items: center;
 }
 
-#indexForm > input{
+#indexForm > textarea{
     width: 100%;
     height: 50%;
     margin-bottom: 10px;
