--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,10 @@ form button{
 #indexForm > button{
     width: 10%;
 }
+#logout{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
